Update Go module dependencies, enhance documentation on microservices architecture, and refactor user model structure for improved clarity and functionality.

--- a/docs/dev/00-完整开发指南.md
+++ b/docs/dev/00-完整开发指南.md
@@ -4,6 +4,87 @@
 
 本文档提供从零开始构建 Beehive IM 系统的完整开发指南，包含每个阶段的详细步骤、代码示例和检查点。
 
+## 微服务架构
+
+Beehive IM 系统采用微服务架构，使用 Cobra 命令行框架构建，包含以下微服务：
+
+### 微服务划分
+
+```mermaid
+graph TB
+    subgraph Clients["客户端"]
+        Web[Web客户端]
+        Mobile[移动端]
+    end
+    
+    subgraph Gateway["Gateway 服务"]
+        WS[WebSocket Gateway<br/>端口: 8080]
+    end
+    
+    subgraph Services["业务服务层"]
+        US[User Service<br/>端口: 50051<br/>用户认证、注册、信息管理]
+        MS[Message Service<br/>端口: 50052<br/>消息发送、历史查询]
+        PS[Presence Service<br/>端口: 50053<br/>在线状态管理]
+    end
+    
+    subgraph Infrastructure["基础设施层"]
+        MQ[RabbitMQ<br/>消息队列]
+        DB[(PostgreSQL<br/>数据库)]
+        Redis[(Redis<br/>缓存)]
+    end
+    
+    Web --> WS
+    Mobile --> WS
+    WS -->|gRPC| US
+    WS -->|gRPC| MS
+    WS -->|gRPC| PS
+    MS --> MQ
+    PS --> Redis
+    US --> DB
+    MS --> DB
+    PS --> DB
+```
+
+### 微服务职责
+
+#### 1. Gateway 服务
+- **职责**：WebSocket 连接管理、消息路由、客户端通信
+- **端口**：8080 (HTTP/WebSocket)
+- **技术**：gorilla/websocket, gRPC Client
+- **特点**：无状态，可水平扩展
+
+#### 2. User Service
+- **职责**：用户注册、登录、认证、用户信息管理
+- **端口**：50051 (gRPC)
+- **技术**：gRPC Server, JWT, GORM
+- **数据**：users 表
+
+#### 3. Message Service
+- **职责**：消息发送、消息历史、未读消息、消息状态管理
+- **端口**：50052 (gRPC)
+- **技术**：gRPC Server, RabbitMQ Producer, GORM
+- **数据**：messages, conversations, groups, group_members 表
+
+#### 4. Presence Service
+- **职责**：在线状态管理、用户上线/下线通知
+- **端口**：50053 (gRPC)
+- **技术**：gRPC Server, Redis, RabbitMQ Producer
+- **数据**：Redis (在线状态缓存)
+
+### Cobra 框架架构
+
+每个微服务使用 Cobra 框架构建，统一的命令结构：
+
+```
+beehive-{service}
+├── serve          # 启动服务
+├── migrate        # 数据库迁移（仅 User/Message Service）
+├── version        # 显示版本信息
+└── config         # 配置相关命令
+    ├── validate   # 验证配置文件
+    └── show       # 显示配置
+```
+
 ## 开发阶段概览
 
 ```mermaid
@@ -64,9 +145,59 @@ cd /opt/Beehive
 mkdir -p api/proto
 mkdir -p cmd/{gateway,user-service,message-service,presence-service}
 mkdir -p internal/{gateway/{websocket,connection},service/{user,message,presence},mq,pkg/{model,db,config,utils}}
+mkdir -p pkg/{options,utils}
 mkdir -p scripts
 mkdir -p docker
 mkdir -p docs/dev
+mkdir -p configs
+```
+
+**项目结构说明：**
+
+```
+Beehive/
+├── api/
+│   └── proto/                    # Protocol Buffers 定义文件
+├── cmd/                          # 微服务入口（Cobra 命令）
+│   ├── gateway/                  # Gateway 服务
+│   │   ├── main.go              # 主入口
+│   │   └── cmd/                 # Cobra 命令定义
+│   ├── user-service/            # User Service
+│   │   ├── main.go
+│   │   └── cmd/
+│   ├── message-service/         # Message Service
+│   │   ├── main.go
+│   │   └── cmd/
+│   └── presence-service/        # Presence Service
+│       ├── main.go
+│       └── cmd/
+├── internal/                     # 内部实现（不对外暴露）
+│   ├── gateway/                 # Gateway 服务实现
+│   │   ├── websocket/          # WebSocket 处理
+│   │   └── connection/         # 连接管理
+│   ├── service/                # gRPC 服务实现
+│   │   ├── user/              # User Service 实现
+│   │   ├── message/           # Message Service 实现
+│   │   └── presence/          # Presence Service 实现
+│   ├── mq/                     # 消息队列
+│   │   ├── producer.go
+│   │   ├── consumer.go
+│   │   └── config.go
+│   └── pkg/                    # 内部共享包
+│       ├── model/              # 数据模型
+│       ├── db/                 # 数据库连接
+│       └── config/             # 配置管理
+├── pkg/                         # 对外共享包
+│   ├── options/                # 命令行选项（Cobra）
+│   └── utils/                  # 工具函数
+├── configs/                     # 配置文件目录
+│   ├── gateway.yaml
+│   ├── user-service.yaml
+│   ├── message-service.yaml
+│   └── presence-service.yaml
+├── scripts/                     # 脚本文件
+├── docker/                      # Docker 配置
+└── docs/                        # 文档
 ```
 
 #### 1.1.3 初始化 Go 模块
@@ -75,7 +206,7 @@ mkdir -p docs/dev
 # 初始化 go.mod（如果还没有）
 go mod init github.com/HappyLadySauce/Beehive
 
-# 添加依赖
+# 添加核心依赖
 go get google.golang.org/grpc
 go get google.golang.org/protobuf
 go get github.com/gorilla/websocket
@@ -85,6 +216,8 @@ go get gorm.io/driver/postgres
 go get gorm.io/driver/mysql
 go get github.com/golang-jwt/jwt/v5
 go get github.com/spf13/viper
+go get github.com/spf13/cobra
+go get github.com/spf13/pflag
 go get github.com/google/uuid
 go get github.com/redis/go-redis/v9
 go get go.uber.org/zap
@@ -1180,11 +1313,153 @@ func main() {
 
 ## 阶段五：WebSocket Gateway（第14-18天）
 
-### 5.1 Connection Manager
+### 5.1 Gateway Service 入口（使用 Cobra）
+
+```go
+// cmd/gateway/main.go
+package main
+
+import (
+    "os"
+    "github.com/HappyLadySauce/Beehive/cmd/gateway/cmd"
+)
+
+func main() {
+    command := cmd.NewGatewayCommand()
+    if err := command.Execute(); err != nil {
+        os.Exit(1)
+    }
+}
+```
+
+### 5.2 Gateway Service Cobra 命令实现
+
+```go
+// cmd/gateway/cmd/root.go
+package cmd
+
+import (
+    "fmt"
+    "github.com/spf13/cobra"
+    "github.com/HappyLadySauce/Beehive/pkg/options"
+    "github.com/HappyLadySauce/Beehive/internal/pkg/config"
+)
+
+var (
+    cfgFile string
+    cfg     *config.Config
+)
+
+func NewGatewayCommand() *cobra.Command {
+    cmd := &cobra.Command{
+        Use:   "gateway",
+        Short: "WebSocket Gateway for Beehive IM",
+        Long:  `WebSocket Gateway handles client connections and message routing.`,
+        PersistentPreRunE: func(cmd *cobra.Command, args []string) error {
+            var err error
+            cfg, err = config.LoadConfig(".")
+            if err != nil {
+                return fmt.Errorf("failed to load config: %w", err)
+            }
+            return nil
+        },
+    }
+    
+    options.AddConfigFlag("gateway", cmd.PersistentFlags())
+    
+    cmd.AddCommand(NewServeCommand())
+    cmd.AddCommand(NewVersionCommand())
+    
+    return cmd
+}
+
+// cmd/gateway/cmd/serve.go
+package cmd
+
+import (
+    "context"
+    "fmt"
+    "log"
+    "net/http"
+    "os"
+    "os/signal"
+    "syscall"
+    "github.com/spf13/cobra"
+    "github.com/HappyLadySauce/Beehive/internal/gateway/websocket"
+    "github.com/HappyLadySauce/Beehive/internal/gateway/connection"
+    "github.com/HappyLadySauce/Beehive/internal/mq"
+)
+
+func NewServeCommand() *cobra.Command {
+    cmd := &cobra.Command{
+        Use:   "serve",
+        Short: "Start the gateway service",
+        RunE: func(cmd *cobra.Command, args []string) error {
+            return runServe()
+        },
+    }
+    
+    return cmd
+}
+
+func runServe() error {
+    // 初始化连接管理器
+    connMgr := connection.NewManager()
+    
+    // 初始化 RabbitMQ Consumer
+    consumer, err := mq.NewConsumer(cfg.RabbitMQ.URL, connMgr, "gateway-1")
+    if err != nil {
+        return fmt.Errorf("failed to create consumer: %w", err)
+    }
+    
+    // 启动消息消费者
+    go consumer.ConsumeSingleChatMessages()
+    go consumer.ConsumeGroupMessages()
+    go consumer.ConsumePresenceMessages()
+    
+    // 创建 WebSocket Handler
+    handler := websocket.NewHandler(connMgr, cfg)
+    
+    // 设置路由
+    http.HandleFunc("/ws", handler.HandleConnection)
+    http.HandleFunc("/health", func(w http.ResponseWriter, r *http.Request) {
+        w.WriteHeader(http.StatusOK)
+        w.Write([]byte("OK"))
+    })
+    
+    // 启动 HTTP 服务器
+    server := &http.Server{
+        Addr: fmt.Sprintf(":%d", cfg.Server.GatewayPort),
+    }
+    
+    // 优雅关闭
+    ctx, cancel := context.WithCancel(context.Background())
+    defer cancel()
+    
+    go func() {
+        sigChan := make(chan os.Signal, 1)
+        signal.Notify(sigChan, syscall.SIGINT, syscall.SIGTERM)
+        <-sigChan
+        log.Println("Shutting down server...")
+        server.Shutdown(ctx)
+        cancel()
+    }()
+    
+    log.Printf("Gateway listening on :%d", cfg.Server.GatewayPort)
+    if err := server.ListenAndServe(); err != nil && err != http.ErrServerClosed {
+        return fmt.Errorf("failed to serve: %w", err)
+    }
+    
+    <-ctx.Done()
+    return nil
+}
+```
+
+### 5.3 Connection Manager
 
 （参考文档 02-WebSocket-Gateway设计.md）
 
-### 5.2 WebSocket Handler
+### 5.4 WebSocket Handler
 
 （参考文档 02-WebSocket-Gateway设计.md）
 
