Implement Auth Service for user authentication, including JWT token generation and validation, and update service architecture to integrate with Redis for token caching and blacklisting. Refactor related documentation and project structure to accommodate the new service.

--- a/docs/dev/00-完整开发指南.md
+++ b/docs/dev/00-完整开发指南.md
@@ -22,7 +22,8 @@ graph TB
     end
     
     subgraph Services["业务服务层"]
-        US[User Service<br/>端口: 50051<br/>用户认证、注册、信息管理]
+        AS[Auth Service<br/>端口: 50050<br/>认证授权服务]
+        US[User Service<br/>端口: 50051<br/>用户数据管理]
         MS[Message Service<br/>端口: 50052<br/>消息发送、历史查询]
         PS[Presence Service<br/>端口: 50053<br/>在线状态管理]
     end
@@ -35,11 +36,14 @@ graph TB
     
     Web --> WS
     Mobile --> WS
+    WS -->|gRPC| AS
     WS -->|gRPC| US
     WS -->|gRPC| MS
     WS -->|gRPC| PS
     MS --> MQ
     PS --> Redis
+    AS --> Redis
+    AS --> DB
     US --> DB
     MS --> DB
     PS --> DB
@@ -53,19 +57,25 @@ graph TB
 - **技术**：gorilla/websocket, gRPC Client
 - **特点**：无状态，可水平扩展
 
-#### 2. User Service
-- **职责**：用户注册、登录、认证、用户信息管理
+#### 2. Auth Service
+- **职责**：用户登录、认证、JWT Token 生成和验证、权限验证
+- **端口**：50050 (gRPC)
+- **技术**：gRPC Server, JWT, Redis
+- **数据**：Redis（Token 缓存、黑名单）
+
+#### 3. User Service
+- **职责**：用户注册、用户信息管理
 - **端口**：50051 (gRPC)
-- **技术**：gRPC Server, JWT, GORM
+- **技术**：gRPC Server, GORM
 - **数据**：users 表
 
-#### 3. Message Service
+#### 4. Message Service
 - **职责**：消息发送、消息历史、未读消息、消息状态管理
 - **端口**：50052 (gRPC)
 - **技术**：gRPC Server, RabbitMQ Producer, GORM
 - **数据**：messages, conversations, groups, group_members 表
 
-#### 4. Presence Service
+#### 5. Presence Service
 - **职责**：在线状态管理、用户上线/下线通知
 - **端口**：50053 (gRPC)
 - **技术**：gRPC Server, Redis, RabbitMQ Producer
@@ -143,8 +153,8 @@ cd /opt/Beehive
 
 # 创建目录结构
 mkdir -p api/proto
-mkdir -p cmd/{gateway,user-service,message-service,presence-service}
-mkdir -p internal/{gateway/{websocket,connection},service/{user,message,presence},mq,pkg/{model,db,config,utils}}
+mkdir -p cmd/{gateway,auth-service,user-service,message-service,presence-service}
+mkdir -p internal/{gateway/{websocket,connection},service/{auth,user,message,presence},mq,pkg/{model,db,config,utils}}
 mkdir -p pkg/{options,utils}
 mkdir -p scripts
 mkdir -p docker
@@ -162,6 +172,9 @@ Beehive/
 │   ├── gateway/                  # Gateway 服务
 │   │   ├── main.go              # 主入口
 │   │   └── cmd/                 # Cobra 命令定义
+│   ├── auth-service/            # Auth Service
+│   │   ├── main.go
+│   │   └── cmd/
 │   ├── user-service/            # User Service
 │   │   ├── main.go
 │   │   └── cmd/
@@ -176,6 +189,7 @@ Beehive/
 │   │   ├── websocket/          # WebSocket 处理
 │   │   └── connection/         # 连接管理
 │   ├── service/                # gRPC 服务实现
+│   │   ├── auth/              # Auth Service 实现
 │   │   ├── user/              # User Service 实现
 │   │   ├── message/           # Message Service 实现
 │   │   └── presence/          # Presence Service 实现
@@ -215,6 +229,7 @@ go get gorm.io/gorm
 go get gorm.io/driver/postgres
 go get gorm.io/driver/mysql
 go get github.com/golang-jwt/jwt/v5
+go get github.com/redis/go-redis/v9
 go get github.com/spf13/viper
 go get github.com/spf13/cobra
 go get github.com/spf13/pflag
