--- a/docs/dev/01-用户登录与操作逻辑.md
+++ b/docs/dev/01-用户登录与操作逻辑.md
@@ -12,44 +12,56 @@
 sequenceDiagram
     participant Client as 客户端
     participant Gateway as WebSocket Gateway
+    participant AuthSvc as Auth Service (gRPC)
     participant UserSvc as User Service (gRPC)
     participant DB as 数据库
+    participant Redis as Redis
     participant ConnMgr as Connection Manager
     participant PresenceSvc as Presence Service
     
     Client->>Gateway: HTTP POST /api/v1/auth/login<br/>{username, password}
-    Gateway->>UserSvc: gRPC: Authenticate(username, password)
+    Gateway->>AuthSvc: gRPC: Login(username, password)
+    AuthSvc->>UserSvc: gRPC: GetUserByUsername(username)
     UserSvc->>DB: 查询用户信息
     DB-->>UserSvc: 返回用户数据
-    UserSvc->>UserSvc: 验证密码哈希
+    UserSvc-->>AuthSvc: 返回用户信息
+    AuthSvc->>AuthSvc: 验证密码哈希
     alt 验证成功
-        UserSvc->>UserSvc: 生成 JWT Token
-        UserSvc-->>Gateway: 返回 Token + 用户信息
+        AuthSvc->>AuthSvc: 生成 JWT Token
+        AuthSvc->>Redis: 缓存 Token 信息
+        AuthSvc-->>Gateway: 返回 Token + 用户信息
         Gateway-->>Client: 返回 Token
         Client->>Gateway: WebSocket 连接请求<br/>Header: Authorization: Bearer {token}
-        Gateway->>UserSvc: gRPC: ValidateToken(token)
-        UserSvc-->>Gateway: 返回用户ID
-        Gateway->>ConnMgr: RegisterConnection(userID, conn)
-        Gateway->>PresenceSvc: gRPC: UserOnline(userID)
-        Gateway->>Gateway: 查询并推送离线消息
-        Gateway-->>Client: WebSocket 连接建立成功
+        Gateway->>AuthSvc: gRPC: ValidateToken(token)
+        AuthSvc->>Redis: 检查 Token 缓存/黑名单
+        alt Token 有效
+            AuthSvc-->>Gateway: 返回用户ID和用户信息
+            Gateway->>ConnMgr: RegisterConnection(userID, conn)
+            Gateway->>PresenceSvc: gRPC: UserOnline(userID)
+            Gateway->>Gateway: 查询并推送离线消息
+            Gateway-->>Client: WebSocket 连接建立成功
+        else Token 无效
+            AuthSvc-->>Gateway: 返回错误
+            Gateway-->>Client: 返回 401 Unauthorized
+        end
     else 验证失败
-        UserSvc-->>Gateway: 返回错误
+        AuthSvc-->>Gateway: 返回错误
         Gateway-->>Client: 返回 401 Unauthorized
     end
 ```
 
 ### 2. 认证实现要点
 
-#### JWT Token 生成
+#### JWT Token 生成（Auth Service）
 
 ```go
-// internal/service/user/auth.go
-package user
+// internal/service/auth/auth.go
+package auth
 
 import (
     "github.com/golang-jwt/jwt/v5"
     "time"
+    "github.com/redis/go-redis/v9"
 )
 
 type Claims struct {
@@ -58,24 +70,41 @@ type Claims struct {
     jwt.RegisteredClaims
 }
 
-func (s *Service) GenerateToken(user *model.User) (string, error) {
+func (s *Service) GenerateToken(userID, username string) (string, error) {
     claims := &Claims{
-        UserID:   user.ID,
-        Username: user.Username,
+        UserID:   userID,
+        Username: username,
         RegisteredClaims: jwt.RegisteredClaims{
-            ExpiresAt: jwt.NewNumericDate(time.Now().Add(24 * time.Hour)),
+            ExpiresAt: jwt.NewNumericDate(time.Now().Add(time.Duration(s.config.JWT.ExpireHours) * time.Hour)),
             IssuedAt:  jwt.NewNumericDate(time.Now()),
             NotBefore: jwt.NewNumericDate(time.Now()),
         },
     }
     
     token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
-    return token.SignedString([]byte(s.secretKey))
+    tokenString, err := token.SignedString([]byte(s.config.JWT.Secret))
+    if err != nil {
+        return "", err
+    }
+    
+    // 缓存 Token 信息到 Redis
+    cacheKey := fmt.Sprintf("token:%s", tokenString)
+    s.redis.Set(ctx, cacheKey, userID, time.Duration(s.config.JWT.ExpireHours)*time.Hour)
+    
+    return tokenString, nil
 }
 
 func (s *Service) ValidateToken(tokenString string) (*Claims, error) {
+    // 1. 检查 Redis 黑名单
+    blacklistKey := fmt.Sprintf("token:blacklist:%s", tokenString)
+    exists, _ := s.redis.Exists(ctx, blacklistKey).Result()
+    if exists > 0 {
+        return nil, fmt.Errorf("token is blacklisted")
+    }
+    
+    // 2. 验证 JWT 签名和过期时间
     token, err := jwt.ParseWithClaims(tokenString, &Claims{}, func(token *jwt.Token) (interface{}, error) {
-        return []byte(s.secretKey), nil
+        return []byte(s.config.JWT.Secret), nil
     })
     
     if err != nil {
@@ -83,6 +112,8 @@ func (s *Service) ValidateToken(tokenString string) (*Claims, error) {
     }
     
     if claims, ok := token.Claims.(*Claims); ok && token.Valid {
+        // 3. 可选：检查用户状态（如果需要）
+        // 这里可以调用 User Service 查询用户状态
         return claims, nil
     }
     
@@ -96,20 +127,19 @@ func (s *Service) ValidateToken(tokenString string) (*Claims, error) {
 // internal/gateway/websocket/handler.go
 func (h *Handler) HandleConnection(w http.ResponseWriter, r *http.Request) {
     // 从 Header 获取 Token
-    token := r.Header.Get("Authorization")
+    token := extractToken(r)
     if token == "" {
         http.Error(w, "Missing authorization token", http.StatusUnauthorized)
         return
     }
     
-    // 移除 "Bearer " 前缀
-    if strings.HasPrefix(token, "Bearer ") {
-        token = token[7:]
+    // 调用 Auth Service 验证 Token
+    req := &pb.ValidateTokenRequest{
+        Token: token,
     }
     
-    // 验证 Token
-    claims, err := h.userService.ValidateToken(token)
-    if err != nil {
+    resp, err := h.authService.ValidateToken(context.Background(), req)
+    if err != nil || !resp.Valid {
         http.Error(w, "Invalid token", http.StatusUnauthorized)
         return
     }
@@ -122,13 +152,25 @@ func (h *Handler) HandleConnection(w http.ResponseWriter, r *http.Request) {
     }
     
     // 注册连接
-    connection := h.connMgr.RegisterConnection(claims.UserID, conn)
+    connection := h.connMgr.RegisterConnection(resp.UserId, conn)
     
     // 通知用户上线
-    h.presenceService.UserOnline(claims.UserID)
+    h.presenceService.UserOnline(resp.UserId)
     
     // 处理连接
-    go h.handleClient(connection, claims.UserID)
+    go h.handleClient(connection, resp.UserId)
+}
+
+func extractToken(r *http.Request) string {
+    // 从 Header 获取
+    token := r.Header.Get("Authorization")
+    if token != "" && strings.HasPrefix(token, "Bearer ") {
+        return token[7:]
+    }
+    
+    // 从 Query 参数获取（备用方案）
+    token = r.URL.Query().Get("token")
+    return token
 }
 ```
 
@@ -564,11 +606,13 @@ func (h *Handler) sendResponse(conn *connection.Connection, msg Message) {
 
 ## 安全考虑
 
-1. **Token 验证**：所有 WebSocket 连接必须携带有效的 JWT Token
-2. **消息验证**：验证消息格式、目标用户是否存在、用户是否有权限
-3. **频率限制**：限制用户发送消息的频率，防止刷屏
-4. **内容过滤**：对消息内容进行敏感词过滤
-5. **连接数限制**：限制单个用户的并发连接数
+1. **Token 验证**：所有 WebSocket 连接必须携带有效的 JWT Token，由 Auth Service 统一验证
+2. **Token 黑名单**：支持 Token 撤销，撤销的 Token 加入 Redis 黑名单
+3. **消息验证**：验证消息格式、目标用户是否存在、用户是否有权限
+4. **频率限制**：限制用户发送消息的频率，防止刷屏
+5. **内容过滤**：对消息内容进行敏感词过滤
+6. **连接数限制**：限制单个用户的并发连接数
+7. **Token 缓存**：Token 验证结果缓存到 Redis，提高性能
 
 ## 性能优化
 
